add jwt and protected route
